--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
-        android:name=".FireApp"
+        android:name=".HumanSensor"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/ic_logo"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/ic_logo_blue"
+        android:label="@string/app_name2"
+        android:roundIcon="@drawable/ic_logo_blue"
         android:supportsRtl="true"
         android:theme="@style/Theme.CapstoneProject"
         tools:targetApi="31">
+        <activity
+            android:name=".activity_HomeSensor1"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".activity_HomeSensor2"
             android:exported="false">
